Fix bad backport of "wikibase: remove the need for SchemaAlignment.resize()"
Closes #6163.

--- a/extensions/wikibase/module/styles/schema-alignment.less
+++ b/extensions/wikibase/module/styles/schema-alignment.less
@@ -60,7 +60,7 @@
   position: sticky;
   top: 0;
   padding-top: 1em;
-  background-color: var(--background-primary);
+  background-color: #fff;
   z-index: 1;
 }
 
